@@ -2,6 +2,7 @@ Release ? (?)
 --------------------------
 SVN revision: ?
 
+	* Changed the ENFA algorithm to force marginality to be the first factor.  Changed broken stick distribution to work on specialisation factors only.  Add new parameter to enable log display of variable loadings for retained factors.
 	* om_console now accepts a second parameter (after the request file) to specify the log level.
 	* Changed the ENFA algorithm allowing absence data to be treated as background points, and log transforming the geomean calculation to avoid the occasional float overflow with large numbers of presences. Fixed a bug in the RetainVariation parameter (range changed from 50-100 to 0.5-1.0). Also fixed a deserialization error.
 	* Compilation now requires CMake 2.6.4.
